added a success and error message when send emails

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,6 +8,16 @@
 </head>
 <body>
 	<div th:replace="~{navbar :: navbar}"></div>
+	
+	<!-- Success Message -->
+	<div th:if="${message}" class="alert alert-success" role="alert">
+	    <span th:text="${message}"></span>
+	</div>
+
+	<!-- Error Message -->
+	<div th:if="${error}" class="alert alert-danger" role="alert">
+	    <span th:text="${error}"></span>
+	</div>
 
 	<div class="container mt-4">
 	    <div class="jumbotron">
